--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -76,6 +77,7 @@
                                                     <a href="">jackets/shrugs</a><br>
                                                     <a href="">skirts/lehengas</a><br>
                                                     <a href="">shararas</a><br>
+                                                    <a href="">frok</a><br>
                                                     <a href="">sleepwear & loungewear</a><br>
                                                 </div>
                                             </li>
