--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.slim.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
-        <link rel="stylesheet" href="/home/arun/khush/loom/static/base.css">
+        <link rel="stylesheet" href="/home/arun/khush/loom2/loom/static/base.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
@@ -106,7 +106,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="container">
-                                <h5 class="text-center mt-5 mb-5 foot" >Copyright © 2022 The Loom All Rights Reserved.</h5>
+                                <h5 class="text-center mt-5 mb-5 foot" >Copyright © 2022 The loom2/loom All Rights Reserved.</h5>
                             </div>
                         </div>
                     </div>
