--- a/product.html
+++ b/product.html
@@ -8,9 +8,9 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js"></script>
 
-        <link rel="stylesheet" href="/home/arun/khush/loom/static/base.css">
+        <link rel="stylesheet" href="/home/arun/khush/loom2/loom/static/base.css">
 
-        <link rel="stylesheet" href="/home/arun/khush/loom/static/custom.css">
+        <link rel="stylesheet" href="/home/arun/khush/loom2/loom/static/custom.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
@@ -29,7 +29,7 @@
             </div>
            
             <div class="col-lg-7 col-md-8 col-sm-8 "  >
-                <a href="/home/arun/khush/loom/index.html">
+                <a href="/home/arun/khush/loom2/loom/index.html">
                     <img src="static/img/logo.svg" class="float-right"  style="width: 200px;" alt="logo">
                 </a>
             </div>
@@ -793,7 +793,7 @@
                 <div class="row">
                     <div class="col-12">
                         <div class="container">
-                            <h5 class="text-center mt-5 mb-5 foot" >Copyright © 2022 The Loom All Rights Reserved.</h5>
+                            <h5 class="text-center mt-5 mb-5 foot" >Copyright © 2022 The loom2/loom All Rights Reserved.</h5>
                         </div>
                     </div>
                 </div>
