--- a/header.html
+++ b/header.html
@@ -162,19 +162,19 @@
                             <div class="col-12">
                                 <ul class="list-group list-group-horizontal">
                                     <div class="col-35">
-                                        <li class="list-group-item"><a href="#" style="color: #333;"></a>rakhi edit
+                                        <li class="list-group-item"><a href="#" style="color: #333;">rakhi edit</a>
                                             <span style="color: orange; font-size: 10px;" class="align-top"><b>LIVE NOW</b></span> 
                                         </li>
-                                        <li class="list-group-item"><a href="#" style="color: #333;"></a>the rakhi shop</li>
+                                        <li class="list-group-item"><a href="#" style="color: #333;">the rakhi shop</a></li>
                                     </div>
                                     <div class="col-35">    
-                                        <li class="list-group-item"><a href="#" style="color: #333;"></a>teej edit</li>
+                                        <li class="list-group-item"><a href="#" style="color: #333;">teej edit</a></li>
                                     </div>
                                     <div class="col-2">
                                         <span></span>
                                     </div>
                                     <div class="col-35">    
-                                        <li class="list-group-item"><a href="#" style="color: #333;"></a>ganesh chatruthi <br>
+                                        <li class="list-group-item"><a href="#" style="color: #333;">ganesh chatruthi </a><br>
                                             edit</li>
                                     </div>
                                     <div class="col-4">    
