--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
                                         <div class="col-35">
                                             <li class="list-group-item"><a href="#" style="color: #333;">women</a>
                                                 <div class="cloth">
-                                                    <a href="">suit sets</a><br>   
-                                                    <a href="">kurtas</a><br>
-                                                    <a href="">dresses</a><br>
-                                                    <a href="">tops</a><br>
-                                                    <a href="">pants/plazzo</a><br>
-                                                    <a href="">blouses</a><br>
-                                                    <a href="">fabric lengths</a><br>
-                                                    <a href="">kaftans</a><br> 
-                                                    <a href="">jackets/shrugs</a><br>
-                                                    <a href="">skirts/lehengas</a><br>
-                                                    <a href="">shararas</a><br>
-                                                    <a href="">frok</a><br>
-                                                    <a href="">sleepwear & loungewear</a><br>
+                                                    <a href="#">suit sets</a><br>   
+                                                    <a href="#">kurtas</a><br>
+                                                    <a href="#">dresses</a><br>
+                                                    <a href="#">tops</a><br>
+                                                    <a href="#">pants/plazzo</a><br>
+                                                    <a href="#">blouses</a><br>
+                                                    <a href="#">fabric lengths</a><br>
+                                                    <a href="#">kaftans</a><br> 
+                                                    <a href="#">jackets/shrugs</a><br>
+                                                    <a href="#">skirts/lehengas</a><br>
+                                                    <a href="#">shararas</a><br>
+                                                    <a href="#">frok</a><br>
+                                                    <a href="#">sleepwear & loungewear</a><br>
                                                 </div>
                                             </li>
                                         </div>  
@@ -168,19 +168,19 @@
                                 <div class="col-12">
                                     <ul class="list-group list-group-horizontal">
                                         <div class="col-35">
-                                            <li class="list-group-item"><a href="#" style="color: #333;"></a>rakhi edit
+                                            <li class="list-group-item"><a href="#" style="color: #333;">rakhi edit</a>
                                                 <span style="color: orange; font-size: 10px;" class="align-top"><b>LIVE NOW</b></span> 
                                             </li>
-                                            <li class="list-group-item"><a href="#" style="color: #333;"></a>the rakhi shop</li>
+                                            <li class="list-group-item"><a href="#" style="color: #333;">the rakhi shop</a></li>
                                         </div>
                                         <div class="col-35">    
-                                            <li class="list-group-item"><a href="#" style="color: #333;"></a>teej edit</li>
+                                            <li class="list-group-item"><a href="#" style="color: #333;">teej edit</a></li>
                                         </div>
                                         <div class="col-2">
                                             <span></span>
                                         </div>
                                         <div class="col-35">    
-                                            <li class="list-group-item"><a href="#" style="color: #333;"></a>ganesh chatruthi <br>
+                                            <li class="list-group-item"><a href="#" style="color: #333;">ganesh chatruthi</a><br>
                                                 edit</li>
                                         </div>
                                         <div class="col-4">    
