feat:anchor link added

--- a/product.html
+++ b/product.html
@@ -602,13 +602,13 @@
             <div class="col-12">
                 <div class="container-fluid">
                     <ul>
-                        <li class="float-left" ><a href="" class="first text-decoration-none"><span>home</span></a><span class="ml-2">
+                        <li class="float-left" ><a href="" class="first text-decoration-none bg-white"><span>home</span></a><span class="ml-2">
                             <img src="static/img/bredcumb.svg" style="width: 11px; height:11px"></span>
                         </li>
-                        <li class="float-left"><a href="" class="first text-decoration-none ml-2"><span>SHOES & BAGS COLLECTIONS</span></a>
+                        <li class="float-left"><a href="" class="first text-decoration-none ml-2 bg-white"><span>SHOES & BAGS COLLECTIONS</span></a>
                             <span class="ml-2"><img src="static/img/bredcumb.svg" style="width: 11px; height:11px"></span>
                         </li>
-                        <li class="float-left"><a href="" class="first text-decoration-none ml-2"><span>STYLISH STRUT</span></a>
+                        <li class="float-left"><a href="" class="first text-decoration-none ml-2 bg-white"><span>STYLISH STRUT</span></a>
                             <span class="ml-2"><img src="static/img/bredcumb.svg" style="width: 11px; height:11px"></span>
                         </li>
                         <li class="float-left"><span style="font-size: small; color: #636363;" class="ml-2">GILDED AURA</span></li>
