feat:anchor link added

--- a/details.html
+++ b/details.html
@@ -607,11 +607,11 @@
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
                             <ul>
-                                <li class="float-left"> <a href=/home/arun/khush/loom2/loom/product.html class="first text-decoration-none">
+                                <li class="float-left"> <a href=/home/arun/khush/loom2/loom/product.html class="first text-decoration-none bg-white">
                                     <span>home</span></a>
                                     <span><img src="static/img/bredcumb.svg" style="width: 11px; height:11px"></span>
                                 </li>
-                                <li class="float-left "><a href=/home/arun/khush/loom2/loom/product.html class="first text-decoration-none ml-2">
+                                <li class="float-left "><a href=/home/arun/khush/loom2/loom/product.html class="first text-decoration-none ml-2 bg-white">
                                     <span>sHOES & BAGS COLLECTIONS</span></a>
                                     <span><img src="static/img/bredcumb.svg" style="width: 11px; height:11px"></span>
                                 </li>
