--- a/productdetail.html
+++ b/productdetail.html
@@ -73,6 +73,23 @@
           opacity: 1;
         }
 
+        .zoom-img {
+         cursor: zoom-in;
+        overflow: hidden;
+        }
+
+       .zoom-img img {
+         width: 100%;
+         height: 100%;
+         object-fit: cover;
+         transition: all .3s ease;
+        }
+
+        .zoom-img img:hover {
+          transform: scale(1.2);
+        }
+
+
  
       
         
@@ -91,7 +108,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-5 col-md-5 col-sm-5  "> 
-                  <div class="card float-left" >
+                  <div class="card float-left zoom-img" >
                     <img src="static/img/web-design-top-banner.jpg" class="img-fluid" id="expandedImg" width="100%">
                   </div> 
 
@@ -144,8 +161,8 @@
                             <span class="fa fa-star"></span>
                         </div>
                         <div>
-                            <button type="button" class="btn text-uppercase text-white btn-block mb-2" 
-                            style="background-color:darkgreen;" title="add to bag">add</button>
+                            <button type="button" class="btn text-white btn-block mb-2" 
+                            style="background-color:darkgreen;" title="add to bag"><i class="material-icons icon">shopping_cart</i> <b>Add</b></button>
 
                         </div>
                         <div>
